--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "bootstrap": "4.0.0",
     "core-js": "2.5.5",
     "font-awesome": "4.7.0",
+    "jquery": "^1.9.1",
+    "moment": "2.22.2",
+    "popper.js": "^1.12.9",
     "rxjs": "6.1.0",
     "zone.js": "0.8.26"
   },
